fixed todo: "Profile plot" and "Coordinate List", are not updated when figure selection changes
git-svn-id: https://www.brockmann-consult.de/svn/os/beam-4.x/trunk@7736 d90d2d48-2b33-0410-a973-e72f85796a02